initial html layout

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <img src="img/money.png" alt="money-img">
+    <h1>Exchange Rate Calculator</h1>
+    <p>Choose the currency and the amounts to get the exchange rate.</p>
+    <div class="container">
+        <div class="currency">
+            
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
